{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 51,
  "lineage": "5144bb0d-affc-da08-d5a3-a39d2b7cd407",
  "resources": [
    {
      "module": "module.compute_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "logs_api_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d3b9d7c643a2e20b",
            "arn": "arn:aws:ec2:ap-southeast-1:036827819449:instance/i-0f1cdf93e96134386",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "custlogsprofile",
            "id": "i-0f1cdf93e96134386",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "logsec2_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0547f05397095fc96"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0547f05397095fc96",
            "private_dns": "ip-10-1-1-36.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.36",
            "public_dns": "ec2-54-151-128-203.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.128.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b54bfc3d6586acd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d8676b37f75bfe6",
            "tags": {
              "Name": "logs_api_instance"
            },
            "tags_all": {
              "Name": "logs_api_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04976a8deb098a603"
            ]
          },
          "dependencies": [
            "module.compute_module.aws_key_pair.logsec2_ssh_key",
            "module.compute_module.aws_network_interface.logsec2_instance_eni_1",
            "module.compute_module.data.aws_ami.amazon_linux",
            "module.security_module.aws_iam_instance_profile.custlogsprofile"
          ]
        }
      ]
    },
    {
      "module": "module.compute_module",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "logsec2_instance_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:036827819449:network-interface/eni-0ef2e67f024ef1e48",
            "id": "eni-0ef2e67f024ef1e48",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:6f:ad:99:43:26",
            "owner_id": "036827819449",
            "private_dns_name": "ip-10-1-1-238.ap-southeast-1.compute.internal",
            "private_ip": "10.1.1.238",
            "private_ip_list": [
              "10.1.1.238"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.1.238"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04976a8deb098a603"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d8676b37f75bfe6"
          },
          "dependencies": [
            "module.networking_module.aws_security_group.logs_sg",
            "module.networking_module.aws_subnet.logs_subnet",
            "module.networking_module.aws_vpc.logspvpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute_module",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "logsec2_instance_eni_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:036827819449:network-interface/eni-0547f05397095fc96",
            "id": "eni-0547f05397095fc96",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:47:2b:89:71:30",
            "owner_id": "036827819449",
            "private_dns_name": "ip-10-1-1-36.ap-southeast-1.compute.internal",
            "private_ip": "10.1.1.36",
            "private_ip_list": [
              "10.1.1.36"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.1.36"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04976a8deb098a603"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d8676b37f75bfe6"
          },
          "dependencies": [
            "module.networking_module.aws_security_group.logs_sg",
            "module.networking_module.aws_subnet.logs_subnet",
            "module.networking_module.aws_vpc.logspvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "logs_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:036827819449:internet-gateway/igw-0af3d33d63f21c646",
            "id": "igw-0af3d33d63f21c646",
            "owner_id": "036827819449",
            "tags": {
              "Name": "logs_gw"
            },
            "tags_all": {
              "Name": "logs_gw"
            },
            "vpc_id": "vpc-0f17337793d128685"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.logspvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "logs_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:036827819449:route-table/rtb-0f1a7a438d72fc7b6",
            "id": "rtb-0f1a7a438d72fc7b6",
            "owner_id": "036827819449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af3d33d63f21c646",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "logs_rt"
            },
            "tags_all": {
              "Name": "logs_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17337793d128685"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_internet_gateway.logs_gw",
            "module.networking_module.aws_vpc.logspvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "logs_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060b35dcbeddad5f8",
            "route_table_id": "rtb-0f1a7a438d72fc7b6",
            "subnet_id": "subnet-01d8676b37f75bfe6"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.logs_gw",
            "module.networking_module.aws_route_table.logs_rt",
            "module.networking_module.aws_subnet.logs_subnet",
            "module.networking_module.aws_vpc.logspvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "logs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:036827819449:security-group/sg-04976a8deb098a603",
            "description": "sg for logs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04976a8deb098a603",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5010,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5010
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "logs_sg",
            "name_prefix": "",
            "owner_id": "036827819449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "logs_sg"
            },
            "tags_all": {
              "Name": "logs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17337793d128685"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_vpc.logspvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "logs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:036827819449:subnet/subnet-01d8676b37f75bfe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d8676b37f75bfe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "036827819449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "logs_subnet"
            },
            "tags_all": {
              "Name": "logs_subnet"
            },
            "vpc_id": "vpc-0f17337793d128685"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.logspvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "logspvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:036827819449:vpc/vpc-0f17337793d128685",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ef211a31ceacd11c",
            "default_route_table_id": "rtb-08eae4268dfdb4945",
            "default_security_group_id": "sg-035b2baf56ca1c0d4",
            "dhcp_options_id": "dopt-0de3d5c9884a6d1f1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f17337793d128685",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08eae4268dfdb4945",
            "owner_id": "036827819449",
            "tags": {
              "Name": "logspvpc"
            },
            "tags_all": {
              "Name": "logspvpc"
            }
          }
        }
      ]
    }
  ]
}